# npcsh

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.benchmark  MANIFEST.in  MODELS.md  Makefile  README.md  book_stand.stl  cities.txt  config.ini  contacts.json  docker-compose.benchmark.yml  docker-test-fresh.sh  fix_indent.py  gallery-0_map.shtml  gallery-1_map.shtml  inventory.json  message_display.py  mkdocs.yml  npcsh.py  npcsh_bench_analysis.py  output.txt  rename_npc_studio_history.py  ruff.toml  setup.py  total.py  tree.txt
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  docker.yml  publish.yml  verify-skills.yml
Formula/: npcsh.rb
adapters/npcsh_dpo_0.8b_smoke/: README.md
docs/: TLDR_Cheat_sheet.md  alicanto.md  benchmark-docker.md  benchmarks.md  guide.md  index.md  installation.md  npc_cli.md  npcsh.md  skills.md  yap.md
examples/: CLI_EXAMPLES.md  alicanto_examples.md  analyze_kg.py  batch_file_analysis.nsh  code_review.nsh  example.nsh  git_workflow.nsh  multi_step_research.nsh  test_kg_system.py  web_research.nsh
examples/research/: experiments.md  research.tex
jinxs/: agent.jinx  chat.jinx
npcsh/: _state.py  alicanto.py  build.py  build.py.bak  build_funcs.py  completion.py  config.py  conversation_viewer.py  corca.py  daemon.py  diff_viewer.py  execution.py  guac.py  history.py  jinx_tester.py  job_runner.py  launcher.py  mcp_helpers.py  mcp_server.py  mcp_server.py.bak  notes.md  npc.py  npc_launcher.py  npcsh.py  parsing.py  plonk.py  pti.py  routes.py  spool.py  ui.py  version_check.py  wander.py  yap.py
rust/: Cargo.toml  build.rs
rust/src/: cli_providers.rs  cron.rs  lib.rs  main.rs  markdown.rs  stream_client.rs  tui.rs  tutorial.rs  version_check.rs
rust/tests/: team_layout.rs  team_loading.rs
scripts/: active_learning_loop.py  add_mlx_provider.py  analyze_ratings.py  append_tasks.py  bench_adapter.py  bench_v2.py  benchmark_to_sft.py  com.npcworldwide.npcsh-daemon.plist  compare_benchmarks.py  compile_and_train.py  docker-benchmark.sh  docker-entrypoint.benchmark.sh  eval_mlx_adapter.py  eval_mlx_agent_loop.py  eval_proper.py  eval_single_task.py  evaluate_adapter.py  export_agent_skills.py  extract_memories.py  extract_tasks.py  fetch_adapter.py  fix_training_data.py  fuse_and_eval.py  generate_tasks.py  install.sh  manual_bench.py  npcsh-daemon.service  pre-commit-export-skills  prepare_v2_data.py  publish_dataset.py  publish_model.py  pull_ollama_cloud_models.sh  quick_bench.py  quick_eval_2b.py  rate_traces.py  run_local_ollama_models.py  run_ollama_cloud_models.py  run_training_pipeline.sh  train_from_csv.py  train_npcsh_rl.py  (+8 more)
tests/: test_chat_history_preservation.py  test_config.py  test_jinx_compilation.py  test_jinxes.py  test_jinxs.py  test_nsh_and_chat.py  test_providers.py  test_tool_routing.py
tmp/: addresses.txt  cities.txt  languages.txt  validators.py
(+458 files in other folders)
