[package]
name = "npcsh"
version = "0.0.0"
edition = "2024"
description = "The composable multi-agent shell"
license = "MIT"
repository = "https://github.com/NPC-Worldwide/npcsh"
homepage = "https://github.com/NPC-Worldwide/npcsh"
keywords = ["npc", "ai", "agent", "shell", "llm"]
categories = ["command-line-utilities"]
readme = "../README.md"

[[bin]]
name = "npcrsh"
path = "src/main.rs"

[dependencies]
npcrs = { version = "0.1.18", default-features = false, features = ["ffi"] }

# Shell-specific deps
rustyline = { version = "15", features = ["with-file-history"] }
serde_yaml = "0.9"
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shellexpand = "3"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
crossterm = "0.28"
libc = "0.2"
