[package]
name = "npcsh"
version = "0.0.0"
edition = "2024"
description = "The composable multi-agent shell"
license = "MIT"
repository = "https://github.com/NPC-Worldwide/npcsh"
homepage = "https://github.com/NPC-Worldwide/npcsh"
keywords = ["npc", "ai", "agent", "shell", "llm"]
categories = ["command-line-utilities"]
readme = "../README.md"

[[bin]]
name = "npcsh"
path = "src/main.rs"

[[bin]]
name = "npc"
path = "src/bin/npc.rs"

[dependencies]
npcrs = { version = "0.1.23", default-features = false, features = ["ffi"] }

reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

rustyline = { version = "15", features = ["with-file-history"] }
serde_yaml = "0.9"
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shellexpand = "3"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
crossterm = "0.28"
libc = "0.2"
termimad = "0.34"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4.45", features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4"] }
semver = "1"
